tests/snapshots/acceptance_scroll__jump_to_top_g.snap
---
source: tests/acceptance_scroll.rs
expression: top_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│Let me understand the task:                                                   │
│                                                                              │
│1. I'm a coordinator agent that CANNOT read/write code directly               │
│(+8 more lines)                                                               │
│                                                                              │
│I'll start by loading the required skill and then following the coordinator pr│
│                                                                              │
│Tool: Skill                                                                   │
│  {                                                                           │
│    "skill": "efficient-subagent-orchestration"                               │
│  }                                                                           │
│                                                                              │
│Tool: Skill                                                                   │
│  {                                                                           │
│    "skill": "beads-project-tracking"                                         │
│  }                                                                           │
│                                                                              │
│Launching skill: efficient-subagent-orchestration                             │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
