tests/snapshots/acceptance_scroll__page_down.snap
---
source: tests/acceptance_scroll.rs
expression: paged_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│── 9 in / 1 out / $0.06 | Context: 149.7k (74%) ──                            │
││   7 Launching skill: efficient-subagent-orchestration                       │
│                                                                              │
││   8 Base directory for this skill: /home/claude/.claude/skills/efficient-sub│
││     agent-orchestration                                                     │
││                                                                             │
││     (+181 more lines)                                                       │
│                                                                              │
││   9 Launching skill: beads-project-tracking                                 │
│                                                                              │
││  10 Base directory for this skill: /home/claude/.claude/skills/beads-project│
││     -tracking                                                               │
││                                                                             │
││     (+219 more lines)                                                       │
│                                                                              │
││  11 Now let me follow the coordinator protocol:                             │
││                                                                             │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
