tests/snapshots/acceptance_scroll__page_down_2x.snap
---
source: tests/acceptance_scroll.rs
expression: second_page_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│5. **Find ready work**: Use bd ready to find available work                   │
│6. **Execute implementation loop**: Delegate to subagents                     │
│                                                                              │
│Let me start with steps 1-3 in parallel.                                      │
│                                                                              │
│Now let me follow the coordinator protocol. Starting with setup, branch/epic v│
│                                                                              │
│🔧  Tool: Bash                                                                 │
│  {                                                                           │
│    "command": "./.specify/scripts/bash/check-prerequisites.sh --json 2>/dev/n│
│    "description": "Check prerequisites for spec setup"                       │
│  }                                                                           │
│                                                                              │
│🔧o Tool: Bash                                                                 │
│  {                                                                           │
│    "command": "git branch --show-current",                                   │
│    "description": "Get current git branch"                                   │
│  }                                                                           │
│                                                                              │
│🔧. Tool: Bash                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
