tests/snapshots/acceptance_scroll__scroll_down_j_key.snap
---
source: tests/acceptance_scroll.rs
assertion_line: 47
expression: scrolled_output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries) ▶─────────────────────────────────────────────────────┐
│                                                                              │
│   3│Let me understand the task:                                              │
│   3│                                                                         │
│   3│1. I'm a coordinator agent that CANNOT read/write code directly          │
│   3│(+8 more lines)                                                          │
│                                                                              │
│   4│I'll start by loading the required skill and then following the coordinat│
│   4│otocol.                                                                  │
│                                                                              │
│   5│🔧  Tool: Skill                                                           │
│   5│  {                                                                      │
│   5│    "skill": "efficient-subagent-orchestration"                          │
│   5│  }                                                                      │
│                                                                              │
│   6│🔧  Tool: Skill                                                           │
│   6│  {                                                                      │
│   6│    "skill": "beads-project-tracking"                                    │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
